erDiagram
    Country ||--o{ StateProvince : "has"
    StateProvince ||--o{ City : "has"
    City ||--o{ BreweryLocation : "located in"

    %% Cross-schema: defined in full in brewery.mmd
    Brewery ||--o| BreweryLocation : "has location"

    Country {
        uniqueidentifier CountryID PK
        nvarchar CountryName
        char ISO3166_1 UK
    }

    StateProvince {
        uniqueidentifier StateProvinceID PK
        nvarchar StateProvinceName
        char ISO3166_2 UK
        uniqueidentifier CountryID FK
    }

    City {
        uniqueidentifier CityID PK
        nvarchar CityName
        uniqueidentifier StateProvinceID FK
    }

    BreweryLocation {
        uniqueidentifier BreweryPostLocationID PK
        uniqueidentifier BreweryPostID "FK, UK"
        nvarchar AddressLine1
        nvarchar AddressLine2 "nullable"
        nvarchar PostalCode
        uniqueidentifier CityID FK
        geography Coordinates "nullable"
    }
